--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL = http://localhost:8081/api/v1
+VITE_API_BASE_URL = http://localhost:8081/v1
 VITE_IMG_BASE_URL = http://localhost:8081/uploads/profile_pictures/
 
 VITE_IMG_BASE_URL1 = http://localhost:8081
