--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
+    "vite-plugin-unused-code": "^0.1.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
